--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,10 +26,6 @@ resources:
 
 variables:
   - template: '/miscellaneous/build_templates/variables.yml@templates'
-  - name: CredFile
-    value: appsettings.json
-  - name: CredFileLibrary
-    value: product-readiness.omf_ing_dotnet.json
   - name: analysisProject
     value: OMF_Ing_DotNet
 
@@ -45,12 +41,15 @@ jobs:
     pool:
       name: 00-OSIManaged-Containers
       demands: Agent.OS -equals $(agentOS)
+    variables:
+      - name: StreamId
+        value: OmfIngressAutomatedTestingStream
+      - name: ConnectionName
+        value: OmfIngressAutomatedTestingConnection
     steps:
-      - template: '/miscellaneous/build_templates/config.yml@templates'
+      - template: '/miscellaneous/build_templates/appsettings.yml@templates'
         parameters:
-          fileOriginal: $(CredFile)
-          fileLibrary: $(CredFileLibrary)
-          filePath: /OmfIngressClientLibraries
+          secrets: 'TenantId, NamespaceId, ClientId, ClientSecret, DeviceClientId, DeviceClientSecret'
 
       - task: DotNetCoreCLI@2
         displayName: 'Nuget restore'
