--- a/OmfIngressClientLibraries/appsettings.placeholder.json
+++ b/OmfIngressClientLibraries/appsettings.placeholder.json
@@ -1,7 +1,7 @@
 {
   "TenantId": "PLACEHOLDER_REPLACE_WITH_TENANT_ID",
   "NamespaceId": "PLACEHOLDER_REPLACE_WITH_NAMESPACE_ID",
-  "Address": "https://dat-b.osisoft.com",
+  "Address": "https://uswe.datahub.connect.aveva.com",
   "ClientId": "PLACEHOLDER_REPLACE_WITH_CLIENT_IDENTIFIER",
   "ClientSecret": "PLACEHOLDER_REPLACE_WITH_CLIENT_SECRET",
   "DeviceClientId": "PLACEHOLDER_REPLACE_WITH_DEVICE_CLIENT_ID",
