--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,7 @@ variables:
 jobs:
   - job: Tests
     strategy:
-      maxParallel: 1 # Avoid conflicts in OCS
+      maxParallel: 1 # Avoid conflicts in ADH
       matrix:
         linux:
           agentOS: Linux
@@ -53,7 +53,7 @@ jobs:
     steps:
       - template: '/miscellaneous/build_templates/appsettings.yml@templates'
         parameters:
-          secrets: 'TenantId, NamespaceId, ClientId, ClientSecret, DeviceClientId, DeviceClientSecret'
+          secrets: 'TenantId, NamespaceId, ClientId, ClientSecret, DeviceClientId, DeviceClientSecret, Resource'
 
       - task: DotNetCoreCLI@2
         displayName: 'Nuget restore'
